# PCL-ROS_3D-Object-Correspondence-Grouping

./: CMakeCache.txt  CMakeCache.txt~  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  README.txt  README.txt~  cluster_extraction.cpp  cmake_install.cmake  correspondence_grouping.cbp  correspondence_grouping.cpp  correspondence_grouping.cpp~  output.pcd  package.xml  rosbag_cookbook_topictype.cpp~  screenshot-1492382917.cam
catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
catkin_generated/installspace/: correspondence_grouping.pc  correspondence_groupingConfig.cmake
correspondence_grouping_obj-plys/plys/: 1_and_a_half_in_metal_washer.ply  1in_metal_washer.ply  2in_metal_washer.ply  black_and_decker_lithium_drill_driver.ply  blank_hard_plastic_card.ply  blue_wood_block_1inx1in.ply  champion_sports_official_softball.ply  cheerios_14oz.ply  comet_lemon_fresh_bleach.ply  morton_pepper_shaker_poisson_mesh.ply  morton_pepper_shaker_tsdf_mesh.ply  morton_salt_shaker_tsdf_mesh.ply  moutain_security_steel_shackle_key_poisson_mesh.ply  (+20 more)
devel/: .catkin  .rosinstall  setup.sh
gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
pcd_files/: deoderant_diag.pcd  milk_1.pcd  milk_2.pcd  test.pcd
pwd/: rospack_cache_08612582927384810983
src/: cluster_extraction.cpp  conditional_cluster_extraction.cpp  correspondence_grouping.cpp  geany_run_script.sh  narf_keypoint_extraction  nearest_neighbors.cpp  normal_distributions_transform.cpp  pcl_global_classification
(+13 files in other folders)
